Fix text overflow for small screens

--- a/frontend/ParkSpace/src/app/components/booking/booking.component.scss
+++ b/frontend/ParkSpace/src/app/components/booking/booking.component.scss
@@ -42,7 +42,10 @@ table th {
 }
 
 .information-card {
-  height: 290px;
+  min-height: 290px;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .information-card mat-card-content {
